--- a/ch_results.tex
+++ b/ch_results.tex
@@ -86,11 +86,11 @@ To do this, we broke the problem of long-term human migrations down in four task
 In these two chapters, we introduced the Machine Learning theory necessary to structure our problem, along with its methods to solve them.
 These models were some of the most common techniques found in the literature for the task we were trying to solve.
 
-To begin we considered the Logistic Regression Classifier along with the logloss metric to evaluate model performance.
+To begin we considered the Logistic Regression Classifier along with the Log-loss metric to evaluate model performance.
 Taking to our advantage the model's more tractable formulation, we showed how model regularization fits inside the Machine Learning frame.
 This concept was introduced along with the notion of model hyperparameters.
 Both were relevant to subsequent sections and in particular to \cref{fig:log_loss_regularization_validation_curve}.
-There we showed that there is importance in model regularization by fitting a Logistic Regression classifier and comparing how its logloss varies across different regularization values.
+There we showed that there is importance in model regularization by fitting a Logistic Regression classifier and comparing how its Log-loss varies across different regularization values.
 This affected both the training and test set performance in a similar way.
 
 
