do texstudio spell check on all chapters

--- a/ch_conclusions.tex
+++ b/ch_conclusions.tex
@@ -116,7 +116,7 @@ This attempt did not add any disease-related data of the kind.}
 
 Other interesting biases stemming from the data are related to international pattern migrations.
 Here we measured migrations only from phone owners within a single country, yet we have seen in \cref{ch:descr-risk}, that  epidemic regions traverse political borders.
-The current dataset is limited to only capturing national migrations, and with this our analysis is limited to movements of Telco users interacting with national antennas only.
+The current dataset is limited to only capturing national migrations, and with this our analysis is limited to movements of TelCo users interacting with national antennas only.
 A similar argument applies to the detection of mobility patterns for people with no cell-phone usage.
  % lack cell phone antennas.
 
@@ -175,7 +175,7 @@ For the purpose of continuing this research line, the following is a list of pos
     Some examples of other algorithms not shown in this work are K-Nearest Neighbors, Support Vector Machines and Classification Neural Networks.
 
     \item [Test other pre-processing techniques] In line with the problem addressed by the previous point, there are multiple other data-based techniques to address the problem of learning with highly unbalanced classes.
-    These tend to focus on undersampling the majority class, over-sampling the minority class, or a combination of both.
+    These tend to focus on under-sampling the majority class, over-sampling the minority class, or a combination of both.
 
 
     \item [Domain Evaluation] The evaluation of Machine Learning algorithms needs to incorporate domain specific knowledge to reassess the errors accordingly. In this sense, we can say that Type I or Type II errors may not be the same at the eyes of a health researcher.
