--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -1054,7 +1054,7 @@ We see that the last procedure improved on the first two experiments in more tha
 This suggests that the first two models were overfitting the training set and by using the top random forest features, we strongly improved on the $F1$ performance.
 Finally, when compared to the Random Forest's experiments, we see that the boosting models performed near the top $F1$ value of $37\%$ achieved in the Random Forest experiments.
 From all model $F1$ scores, the lowest and highest output scores were $31.4\%$ and $35.4\%$ respectively.
-This means that, at most, the worst model was $17\%$ less performant in this score.
+This means that, at most, the worst model had a performance for this score which was $17\%$ lower.
 %The rest of worst relative difference for all models, to this value, was of $17\%$ at most and $4.5\%$ at least.
 
 Still, for that case, the top Random Forest's $F1$ score was attained in the first experiment, where we made use of the highly target-correlated features.
@@ -1185,7 +1185,7 @@ Here we present a very brief outline of this algorithm's performance on our gene
 Without going in to depth on the specifics of the experiments, we ran the classifier in a cross validation procedure against all of the four tasks outlined in \cref{long_term}, and using the same $Accuracy$, $F1$ and $ROC AUC$ classifier scores as in other method's experiment runs.
 We took advantage of this method's fast training runtime to rapidly evaluate all tasks on this algorithm.
 % The speed small time needed to fit this classifier on a large dataset.
-The results were composed into \cref{tab:naive_bays_experiment_results} and summarise two aspects of the method: its lower performance when compared to other previous methods, and the algorithm's fast run-time.
+The results were composed into \cref{tab:naive_bays_experiment_results} and summarize two aspects of the method: its lower performance when compared to other previous methods, and the algorithm's fast run-time.
 Given that this algorithm was introduced for benchmarking purposes, we will not expand in this section any further results for this learner as thes will be made in \cref{ch:results}, along with specific comparisons to other learner's results.
 %the given thoroughly  For further analysis of them, please refer to as
 
