--- a/ch_introduction.tex
+++ b/ch_introduction.tex
@@ -1,11 +1,3 @@
-%!TEX root = main.tex
-%===================================================================================================
-%          File: ch1_introduction.tex
-%        Author: Juan de Monasterio
-%       Created: 08 Feb 2017
-%   Description: Chapter 1: Introduction
-%===================================================================================================
-
 \chapter{Introduction}\label{ch:introduction}
 
 
@@ -120,7 +112,7 @@ A map of this ecoregion is shown in \cref{fig:granchaco}.
 \end{figure}
 
 The ecoregion's low socio-demographic conditions further support the parasite's life-cycle, where domestic interactions between humans, triatomines and animals foster the appearance of new infection cases, particularly among rural and poor areas.
-% The ecoregion as of today is hyperendemic for the disease.
+% The ecoregion as of today is hyper-endemic for the disease.
 This region is considered as the endemic zone $E_Z$ in the analysis described in \cref{ch:descr-risk} and \cref{ch:machineLearning}.
 
 %\todo{add more references to examples of CDRs and chagas or other diseases}
